--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "my-react-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -15,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test -- --detectOpenHandles",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,8 +35,15 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "testMatch": [
+      "**/src/**/*.(test|spec).[jt]s?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "\\\\node_modules\\\\"
+    ]
+  },
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
 }
-
