--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "my-react-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -14,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test -- --detectOpenHandles",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,13 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "testMatch": [
-      "**/src/**/*.(test|spec).[jt]s?(x)"
-    ]
-  },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "jest-junit": "^12.0.0"
+    "gh-pages": "^6.1.1"
   }
 }
