--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.js\" --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.0",
     "gh-pages": "^6.1.1"
   }
 }
