--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"src/**/*.js\" --fix"
+    "lint": "eslint 'src/**/*.js' --fix --format json --output-file eslint-report.json"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +38,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "eslint-config-react-app": "^7.0.0",
+    "eslint": "^8.57.1",  // This is the latest version of ESLint as of your usage
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.32.0",  // Adding ESLint plugin for React
+    "eslint-plugin-react-hooks": "^4.6.0",  // Adding React Hooks linting
     "gh-pages": "^6.1.1"
   }
 }
